k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: house-price-service
  namespace: house-price

spec:
  selector:
    app: house-price

  ports:
  - port: 8000
    targetPort: 8000

  type: ClusterIP
