k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: house-price-ingress
  namespace: house-price

spec:
  rules:
  - host: house-price.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: house-price-service
            port:
              number: 8000
